fix: target css of siebar less strictly (#33)
colors were not showing up properly

fix #31

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -245,13 +245,11 @@ html .navbar .DocSearch {
     no-repeat;
 }
 
-html[data-theme='light']
-  .docSidebarContainer_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocPage- {
+html[data-theme='light'] div[class^='docSidebarContainer'] {
   background: #f2f2f2;
 }
 
-html[data-theme='dark']
-  .docSidebarContainer_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocPage- {
+html[data-theme='dark'] div[class^='docSidebarContainer'] {
   background: var(--ifm-color-gray-800);
 }
 
@@ -273,7 +271,7 @@ html[data-theme='dark']
 }
 
 .menu > ul > .menu__list-item {
-  border-top: 1px solid rgb(128, 128, 128, 0.25);
+  border-top: 1px solid rgba(128, 128, 128, 0.25);
 }
 
 .menu > ul > .menu__list-item:first-child {
